--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,16 +6,18 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-	<!--This bundle was moved by the Telerik VS Extensions for compatibility reasons-->
-	@Scripts.Render("~/bundles/jquery")
-	<link href="https://cdn.kendostatic.com/2022.3.913/styles/kendo.default-ocean-blue.min.css" rel="stylesheet" type="text/css" />
-	<link href="@Url.Content("~/Content/bootstrap.min.css")" rel="stylesheet" type="text/css" />
-	<link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
-	<script src="https://cdn.kendostatic.com/2022.3.913/js/jquery.min.js"></script>
-	<script src="https://cdn.kendostatic.com/2022.3.913/js/jszip.min.js"></script>
-	<script src="https://cdn.kendostatic.com/2022.3.913/js/kendo.all.min.js"></script>
-	<script src="https://cdn.kendostatic.com/2022.3.913/js/kendo.aspnetmvc.min.js"></script>
-	<script src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
+    <!--This bundle was moved by the Telerik VS Extensions for compatibility reasons-->
+    @Scripts.Render("~/bundles/jquery")
+    <link href="~/Content/kendo/2022.3.913/kendo.default-ocean-blue.min.css" rel="stylesheet" type="text/css" />
+
+    <link href="@Url.Content("~/Content/bootstrap.min.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+   
+    <script src="~/Scripts/kendo/2022.3.913/jquery.min.js"></script>
+    <script src="~/Scripts/kendo/2022.3.913/jszip.min.js"></script>
+    <script src="~/Scripts/kendo/2022.3.913/kendo.all.min.js"></script>
+    <script src="~/Scripts/kendo/2022.3.913/kendo.aspnetmvc.min.js"></script>
+    <script src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
 </head>
 <body>
     
