--- a/Views/FoodHub/SignIn.cshtml
+++ b/Views/FoodHub/SignIn.cshtml
@@ -2,42 +2,8 @@
 @{
     ViewBag.Title = "SignIn";
 }
-<style>
+<link href="~/Content/SignIn.css" rel="stylesheet" type="text/css" />
 
-    body {
-        background-color: papayawhip;
-    }
-
-    .signUp-form, .signUp-Image {
-        width: 90%;
-        overflow: hidden;
-        margin: auto;
-    }
-
-    .container {
-        margin-top: 40px;
-        width: 900px;
-        background: #ffff;
-        display: flex;
-        box-shadow: 0px 15px 16.83px 0.17px rgba(0, 0, 0, 0.05);
-        border-radius: 20px;
-        padding-bottom: 10px;
-    }
-
-    .signUp-content {
-        width: 50%;
-        overflow: hidden;
-    }
-
-    img {
-        margin-top: 20px;
-        max-width: 100%;
-    }
-
-    .link {
-        margin-left: 110px;
-    }
-</style>
 <div class="container">
     <div class="signUp-content">
         <div class="signUp-form">
@@ -84,51 +50,7 @@
     </div>
 </div>
 
-<script>
-    function setPasswordEditor(container, options) {
-        $('<input type="password" id="password" name="' + options.field + '" title="Password" required="required" autocomplete="off" aria-labelledby="Password-form-label" data-bind="value: Password" aria-describedby="Password-form-hint"/>')
-            .appendTo(container)
-            .kendoTextBox();
-    }
-    function EmailEditor(container, options) {
-        $('<input type="email" id="email" name="' + options.field + '" title="Email" required="required" />')
-            .appendTo(container)
-            .kendoTextBox();
-    }
-
-    function onFormValidateField(e) {
-        $("#validation-success").html("");
-    }
-
-    function onFormSubmit(e) {
-        e.preventDefault();
-
-        $.ajax({
-            url: '/FoodHub/SignIn',
-            method: 'POST',
-            data: {
-
-                email: $('#email').val(),
-                password: $('#password').val()
-
-            },
-            success: function (result) {
-                if (result == "success") {
-                    window.location.href = "FoodHub/Main";
-                } else {
-                    $("#validation-success").html("<div class='k-messagebox k-messagebox-error'>Wrong Email or Password</div>");
-                }
-            },
-            error: function (jqXHR) {
-
-            }
-        })
-    }
-
-    function onFormClear(e) {
-        $("#validation-success").html("");
-    }
-</script>
+<script src="~/Scripts/SiginIn.js"></script>
 
 
 
